# em_algorithm_eigen

./: CMakeLists.txt  README.md  example.py  setup.py
include/em_algorithm_eigen/: em_algorithm_eigen.h  variational_inference.h
src/: em_algorithm_eigen.cpp  em_algorithm_eigen_py.cpp  variational_inference.cpp
